name:                servant-learning
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mattdenner/servant-learning#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Denner
maintainer:          matt.denner@gmail.com
copyright:           2019 Matthew Denner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-learning-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-learning
  default-language:    Haskell2010

test-suite servant-learning-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-learning
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattdenner/servant-learning
